--- a/djangoproject/gestion_stock/templates/bonLivraisonEntree.html
+++ b/djangoproject/gestion_stock/templates/bonLivraisonEntree.html
@@ -1,10 +1,130 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends user.is_authenticated|yesno:"base_generic.html,empty.html" %}
 
-</body>
-</html>
+{% block content %}
+
+<style>
+    .ui-dialog-titlebar-close {
+        visibility: hidden;
+    }
+    input.text { margin-bottom:12px; width:95%; padding: .4em; }
+    fieldset { padding:0; border:0; margin-top:25px; }
+    .ui-dialog .ui-state-error { padding: .3em; }
+    .validateTips { border: 1px solid transparent; padding: 0.3em;}
+    table.dataTable thead .sorting:after,
+    table.dataTable thead .sorting:before,
+    table.dataTable thead .sorting_asc:after,
+    table.dataTable thead .sorting_asc:before,
+    table.dataTable thead .sorting_asc_disabled:after,
+    table.dataTable thead .sorting_asc_disabled:before,
+    table.dataTable thead .sorting_desc:after,
+    table.dataTable thead .sorting_desc:before,
+    table.dataTable thead .sorting_desc_disabled:after,
+    table.dataTable thead .sorting_desc_disabled:before {
+        bottom: .5em;
+    }
+</style>
+
+<div class="container"><h1 class="text-center"> Liste des B.L entree </h1></div>
+<br>
+
+<div class="container">
+    <div class="form-group row text-center">
+
+        <div class="col">
+            <button type="button" id="back-row" class="btn btn-default btn-rounded btn-outline-dark">Tout</button>
+        </div>
+        <div class="col">
+            <button type="button" id="create-row" class="btn btn-success btn-rounded btn-outline-dark">Ajouter</button>
+        </div>
+
+    </div>
+</div>
+
+<div class="container">
+    <div class="border shadow-lg p-3 mb-5 bg-white rounded">
+        <div class="row">
+            <div class="container">
+                <div class="table-responsive">
+                    <table id="dtBasicExample" class="table table-striped table-bordered table-sm" cellspacing="0" width="100%">
+                        <thead>
+                        <tr>
+                            <th scope="col" class="th-sm"><i class="fas fa-cog"></i></th>
+                            <th scope="col" class="th-sm"> dossier </th>
+                            <th scope="col" class="th-sm"> date </th>
+                            <th scope="col" class="th-sm"> numéro BL </th>
+                            <th scope="col" class="th-sm"> qte palettes </th>
+                            <th scope="col" class="th-sm"> fournisseur </th>
+                            <th scope="col" class="th-sm"> identifiant </th>
+                            <th scope="col" class="th-sm"> <i class="fa fa-trash"></i> </th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        {% for items in entree %}
+                        <tr>
+                            <td> <button id='{{ items.idBonLivraisonEntree }}' class="dyna"> -> </button></td>
+                            <td> {{ items.fk_TypeZoneDepot.nom }} </td>
+                            <td> {{ items.dateReception }} </td>
+                            <td> {{ items.numeroBonLivraison }} </td>
+                            <td> {{ items.quantitePalette }} </td>
+                            <td> {{ items.fk_Fournisseur.nom }} </td>
+                            <td> {{ items.idBonLivraisonEntree }} </td>
+                            <td> <button id='{{ items.idBonLivraisonEntree  }}' class="dynad"> X </button> </td>
+                        </tr>
+                        {% endfor %}
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<script type="text/javascript">
+    $(document).ready(function () {
+        $('#dtBasicExample').DataTable();
+        $('.dataTables_length').addClass('bs-select');
+    });
+
+    $("#create-row").click(function() {
+        location.href = "{% url 'bonLivraisonEntreeadd' %}";
+    });
+
+    $(document).on("click", "button.dyna" , function(e) { // event pour modifier les entree transporteur
+        var idClicked = e.target.id;
+        var name = "";
+        var trueid = 0;
+        alert(idClicked);
+        "{% for items in cli %}"
+        if ('{{ items.idClient }}' == idClicked) {
+            name = '{{ items.nom }}';
+            trueid = '{{ items.id }}';
+        }
+        "{% endfor %}"
+        window.location.href = "{% url 'bonLivraisonEntreemodify' %}?id=" + idClicked + "&" + "name=" + name + "&" + "trueid=" + trueid;
+    });
+
+    $(document).on("click", "button.dynad" , function(e) { // event pour delete la ligne sélectionner
+        var idClicked = e.target.id;
+        alert(idClicked);
+        $.ajax({
+            type:"POST",    //type de requête utilisé par ajax
+            url:"/ble/delete/", //lien de la view qui gère la requête post pour supprimer une entree
+            data: {
+                'name': $('#nom').val(), // nom du transporteur récuperer dans le input #nom
+                'id': idClicked, // id du transporteur acquis grace a une incrementation en js
+                csrfmiddlewaretoken: '{{ csrf_token }}'
+            },
+            success: function(msg, data, settings){
+                alert("gg " + msg);
+            },
+            failure: function() {
+                alert("fail");
+            }
+        });
+
+
+
+    });
+
+</script>
+{% endblock %}
